added util to populate db

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
+  },
+  "devDependencies": {
+    "async": "^3.2.4"
   }
 }
